Fix: Removed all compile warnings.
Atropos show all informations (status, time to live, etc)
Fix: bad return to prompt (-h ou -V) 

04/03/2015 vrrpd 1.12

More information in log file (with atropos --state and syslog) 
Better control with VRRPD packets without any identification (like Arkoon FW)
Minor fixes

10/09/2014 vrrpd 1.11

Fix: The change in time cause the backup vrrp daemon to send vrrp advertisements - By charles savoie
Fix: vrrpd cannot be invoked from python script - By charles savoie 

03/02/2014 Vrrpd 1.10

Two optional command line arguments (x,z) with value of priorities.
If this arguments exists, calling signal SIGTTIN and SIGTTOU instead of increment/decrement 
priority of running process - By Ivan Zhiltsov -

Fix: some minor bugs 
Cleaned source code 
Rewrite killvrrpd engine 

10/09/2013 Vrrpd 1.9

Fix: Minor bugs
Atropos: Ability to change process priority (dynamically)

17/12/2012 Vrrpd 1.8

Fix: bad behaviour with some link status
Fix: Crash when trying to read non-readable config file

29/11/2012 Vrrpd 1.7

Fix bad behaviour with slow network performance 

13/06/2012 Vrrpd 1.6

Code adaptation for Endian Firewall Community - Alain Abbas libertech.fr
Fix bad behaviour with link status for some OS 

15/02/2012 Vrrpd 1.5

Optional subnet mask for the VIP address -> From Debian (Sylvain Vallerot) http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=235420
Fix a bad behaviour with down/master script, if the shell script was frozen - for example with a sleep x command - Vrrpd was also blocked

23/01/2011 Vrrpd 1.4

Magic packet - If you can't use virtual mac adress, Vrrpd send gratuitous ARP and it can also send magic packet from virtual to gateway
VRRPD - Is now Compatible with vlan interfaces - with one vmac by vlan -

07/04/2011 Nouvelle version de Vrrpd (1.3):

Modification permettant l'utilisation de Vrrpd sur des systèmes n'autorisant pas l'accès aux informations hardware des cartes réseaux - par exemple les systèmes de virtualisation - 